[project]
name = "replbuilder"
version = "1.0.6"
description = "Quickly build a custom command REPL environment with this tool"
readme = "README.md"
license = {text = "MIT"}
keywords = ["repl", "repl builder"]
authors = [
  {name = "Rocky Li", email = "aperocky@gmail.com" }
]

[project.urls]
"Homepage" = "https://github.com/Aperocky/replbuilder"
"Source" = "https://github.com/Aperocky/replbuilder"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
